--- a/course-choice-frontend/src/index.css
+++ b/course-choice-frontend/src/index.css
@@ -5,3 +5,11 @@
 
 /* Temp fix for weird iframe problem I haven't looked at yet */
 iframe { left: 0 !important }
+
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+}
